--- a/notebooks/Multi-LIngual Search.ipynb
+++ b/notebooks/Multi-LIngual Search.ipynb
@@ -29,9 +29,9 @@
    },
    "outputs": [],
    "source": [
-    "COHERE_API_KEY = \"aSYrKOu5FSFziwwaMzbKxAQt4GBTYgUrHPD71Dsx\"\n",
-    "QDRANT_API_KEY = \"uMxULKCjCGG-Mir9TsdWCIv5W45-fEurX6cOXKz8rZwwQLeIBJReoA\"\n",
-    "QDRANT_HOST = \"5ddc2bb2-e295-46c4-8be1-e90a673a5d32.us-east-1-0.aws.cloud.qdrant.io\""
+    "COHERE_API_KEY = \"COHERE_API_KEY\"\n",
+    "QDRANT_API_KEY = \"QDRANT_API_KEY\"\n",
+    "QDRANT_HOST = \"QDRANT_HOST\""
    ]
   },
   {
